tests/fixtures/errors/unknown_callee.z
# a bare callable that resolves nowhere is an unknown reference, never a
# silently-emitted constant

main: function is {
    x: someTypoedName arg: 5
    print "\{x}"
}
